@@ -1,3 +1,4 @@
+2022-04-10: Don't run tests if bash is missing
 2022-04-10: Looking for libxml2, first try pkg-config
 2022-04-04: Update MSVC project
 2022-04-02: Add support for GNU/kFreeBSD and GNU/Hurd
